--- a/FinalProject1.css
+++ b/FinalProject1.css
@@ -13,6 +13,24 @@ html, body {
   border: 2px solid black;
 }
 
+#floating-panel {
+        position: absolute;
+        top: 10px;
+        left: 25%;
+        z-index: 5;
+        background-color: #fff;
+        padding: 5px;
+        border: 1px solid #999;
+        text-align: center;
+        font-family: 'Roboto','sans-serif';
+        line-height: 30px;
+        padding-left: 10px;
+      }
+      
+p {
+  padding-left: 400px;
+}
+
 h2 {
   margin:20px;
   color: red;
